labs/release-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vertx-greet
  name: vertx-greet
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: vertx-greet
